package com.dejong.delivery;

public enum DeliveryOption {
    GIFT_CARD, WRAPPING_SERVICES, INSURANCES
}
