package com.dejong.delivery;

public interface IDelivery {

    String description();
    double price();

}
