package com.dejong.member;

public enum MembershipType {
    BLUE, SILVER, GOLD, NONE
}
