package com.dejong.newsletters;

public interface IObserver {
    void update(String news);
}

