package com.dejong.products;

import com.dejong.utilities.Utilities;

public class FlipFlops extends Shoes {

    public FlipFlops() {
        this.id = Utilities.UNKNOWN;
        this.supplier = Utilities.UNKNOWN;
        this.brand = Utilities.UNKNOWN;
        this.description = Utilities.UNKNOWN;
        this.price = Utilities.NO_VALUE;
    }
}
