package com.dejong.products;

public enum ShoeType {
    RUNNING_SHOES, FLIP_FLOPS, HIGH_HEELS
}
